# Embracing_Modern_Cpp_Safely-

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  decltype.cc  move.cc  utf8.cc
